Fix execution count and output for slope and intercept calculations in TP6 notebook

--- a/TP/TP6/TP6.ipynb
+++ b/TP/TP6/TP6.ipynb
@@ -2137,8 +2137,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 143,
    "id": "d48e8042",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[166.86001569]])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Slope \n",
+    "lm1.coef_\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "af36bc49",
    "metadata": {},
    "outputs": [
     {
@@ -2147,15 +2170,12 @@
        "array([-7963.33890628])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Slope \n",
-    "lm1.coef_\n",
-    "\n",
     "# Intercept\n",
     "lm1.intercept_"
    ]
