Fix execution count for slope and intercept calculations, and update markdown interpretation for regression results in TP6 notebook.

--- a/TP/TP6/TP6.ipynb
+++ b/TP/TP6/TP6.ipynb
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "d48e8042",
    "metadata": {},
    "outputs": [
@@ -2154,8 +2154,7 @@
    ],
    "source": [
     "# Slope \n",
-    "lm1.coef_\n",
-    "\n"
+    "lm1.coef_\n"
    ]
   },
   {
@@ -3237,35 +3236,12 @@
    "source": [
     "### Interprétation des résultats précédents\n",
     "\n",
-    "1. **Intercept (`np.float64(-7963.338906281046)`) :**\n",
-    "    - L'intercept représente le prix prédit lorsque toutes les variables indépendantes sont égales à zéro. Bien que cette situation ne soit pas réaliste, il sert de point de départ pour le modèle.\n",
-    "\n",
-    "2. **Pente (`slope = 166.86001569141598`) :**\n",
-    "    - Cela signifie qu'une augmentation d'une unité de `highway-mpg` est associée à une diminution moyenne de 166.86 dans le prix des voitures.\n",
-    "\n",
-    "3. **Coefficient de corrélation (`r_value = 0.8723351674455185`) :**\n",
-    "    - Cela indique une forte corrélation positive entre `highway-mpg` et `price`.\n",
-    "\n",
-    "4. **R-carré (`r_value**2 = 0.761`) :**\n",
-    "    - Environ 76.1% de la variance dans `price` est expliquée par `highway-mpg`.\n",
-    "\n",
-    "5. **Valeur p (`p_value = 9.265491622198355e-64`) :**\n",
-    "    - La valeur p très faible indique que la relation entre `highway-mpg` et `price` est statistiquement significative.\n",
-    "\n",
-    "6. **Erreur standard (`std_err = 6.629332440878305`) :**\n",
-    "    - Cela représente l'incertitude associée à l'estimation de la pente.\n",
-    "\n",
-    "7. **Coefficients du modèle multiple (`array([53.49574423, 4.70770099, 81.53026382, 36.05748882])`) :**\n",
+    "**Coefficients du modèle multiple (`array([53.49574423, 4.70770099, 81.53026382, 36.05748882])`) :**\n",
     "    - Ces coefficients indiquent l'effet moyen de chaque variable indépendante sur le prix, en supposant que toutes les autres variables restent constantes :\n",
     "      - `53.49574423` : Une augmentation d'une unité de `horsepower` entraîne une augmentation moyenne de 53.50 dans le prix.\n",
     "      - `4.70770099` : Une augmentation d'une unité de `curb-weight` entraîne une augmentation moyenne de 4.71 dans le prix.\n",
     "      - `81.53026382` : Une augmentation d'une unité de `engine-size` entraîne une augmentation moyenne de 81.53 dans le prix.\n",
-    "      - `36.05748882` : Une augmentation d'une unité de `highway-mpg` entraîne une augmentation moyenne de 36.06 dans le prix.\n",
-    "\n",
-    "8. **Modèle de régression (`LinearRegression`) :**\n",
-    "    - Le modèle `LinearRegression()` a été ajusté pour prédire le prix en fonction des variables indépendantes. Il utilise la méthode des moindres carrés pour minimiser l'erreur entre les valeurs prédites et les valeurs réelles.\n",
-    "\n",
-    "En résumé, les résultats montrent que les variables indépendantes ont des impacts significatifs sur le prix des voitures. Les coefficients permettent d'identifier les variables les plus influentes, tandis que l'intercept donne une base pour les prédictions. Ces modèles peuvent être utilisés pour mieux comprendre les relations entre les caractéristiques des voitures et leur prix.\n"
+    "      - `36.05748882` : Une augmentation d'une unité de `highway-mpg` entraîne une augmentation moyenne de 36.06 dans le prix.\n"
    ]
   },
   {
@@ -3635,7 +3611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 145,
    "id": "80254810",
    "metadata": {},
    "outputs": [],
